--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/runtime": "^7.26.0",
+    "react-router-dom": "^6.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
